[package]
name = "zodiac-wormhole"
version = "0.1.0"
authors = ["Ninetyfour"]
edition = "2018"
license = "Apache-2.0"
description = ""
repository = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.4" } 
cosmwasm-std = { version = "1.0.0", features = ["iterator", "stargate"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
cw-storage-plus = { version = "0.13.4", features = ["iterator"]}
zodiac = { path = "../../packages/zodiac", default-features = false, version = "0.1.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
astroport = { git = "https://github.com/astroport-fi/astroport-core", rev = "refs/pull/308/head" }
cw-asset = "2.2.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"